--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.0-M1'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.0-M1'
     testImplementation 'org.assertj:assertj-core:3.20.2'
+    implementation 'io.javalin:javalin:4.1.1'
+    implementation 'org.slf4j:slf4j-simple:1.7.32'
 }
 
 mainClassName = 'hexlet.code.App'
