Ready to deploy

--- a/build.gradle
+++ b/build.gradle
@@ -41,5 +41,8 @@ dependencies {
     implementation 'org.slf4j:slf4j-simple:1.7.32'
 }
 
+task stage(dependsOn: ['clean', 'installDist'])
+installDist.mustRunAfter clean
+
 mainClassName = 'hexlet.code.App'
 
