--- a/build.gradle
+++ b/build.gradle
@@ -74,6 +74,10 @@ task generateMigrations(type: JavaExec) {
     mainClass = 'hexlet.code.MigrationGenerator'
 }
 
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
+}
+
 application {
     mainClass = 'hexlet.code.App'
 }
