--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,22 +3,12 @@ datasource:
   # Задаём базу данных, к которой будет происходить подключение
   db:
     username: "sa"
-    password: ""
+    password: "sa"
     url: "jdbc:h2:./sam_serdiukov"
 
 ebean:
   db:
     migration:
       run: true
-  #      generate: true
+#        generate: true
   #      seedSql: seed.sql
-
-#  # Настраиваем консоль Н2
-#  # Это позволит нам открыть её в браузере по указанному пути
-#  h2:
-#    console:
-#      enabled: true
-#      # Указываем путь, по которому будет открываться консоль
-#      path: /h2console/
-#      settings:
-#        web-allow-others: true
