test multiple migration db

--- a/build.gradle
+++ b/build.gradle
@@ -61,9 +61,10 @@ dependencies {
     implementation 'io.ebean:ebean-annotation:7.3'
     annotationProcessor 'io.ebean:querybean-generator:12.11.5'
 
-    // NOTE: ebean-ddl-generator требует старые зависимости, которых нет в java 9 и выше
     implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.5'
     implementation 'javax.activation:activation:1.1.1'
+    testImplementation 'io.ebean:ebean-test:12.11.5'
+
 }
 
 task stage(dependsOn: ['clean', 'installDist'])
@@ -76,6 +77,10 @@ task generateMigrations(type: JavaExec) {
 
 tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
+}
+
+checkstyle {
+    toolVersion '9.0'
 }
 
 application {
