--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,7 @@ dependencies {
     implementation 'io.ebean:ebean-migration:12.11.2'
     implementation 'io.ebean:ebean-annotation:7.3'
     annotationProcessor 'io.ebean:querybean-generator:12.11.5'
-
+    testImplementation 'com.konghq:unirest-java:3.13.0'
     implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.5'
     implementation 'javax.activation:activation:1.1.1'
     testImplementation 'io.ebean:ebean-test:12.11.5'
