--- a/build.gradle
+++ b/build.gradle
@@ -32,11 +32,7 @@ jacocoTestReport {
 }
 
 dependencies {
-    implementation 'com.fasterxml.jackson.core:jackson-core:2.12.4'
-    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.12.4'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.4'
-    implementation 'org.junit.jupiter:junit-jupiter-engine:5.8.0-M1'
-    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.12.4'
+
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.0-M1'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.0-M1'
     testImplementation 'org.assertj:assertj-core:3.20.2'
@@ -53,17 +49,17 @@ dependencies {
 
     implementation 'com.h2database:h2:1.4.200'
     implementation 'org.postgresql:postgresql:42.2.24'
+    implementation 'org.jsoup:jsoup:1.14.3'
 
     implementation 'io.ebean:ebean:12.11.5'
     implementation 'io.ebean:ebean-ddl-generator:12.11.5'
-    implementation 'io.ebean:ebean-querybean:12.11.5'
     implementation 'io.ebean:ebean-migration:12.11.2'
-    implementation 'io.ebean:ebean-annotation:7.3'
     annotationProcessor 'io.ebean:querybean-generator:12.11.5'
-    testImplementation 'com.konghq:unirest-java:3.13.0'
+    implementation 'com.konghq:unirest-java:3.13.0'
     implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.5'
     implementation 'javax.activation:activation:1.1.1'
     testImplementation 'io.ebean:ebean-test:12.11.5'
+    testImplementation("com.squareup.okhttp3:mockwebserver:4.9.3")
 
 }
 
